# AICamera

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/paperfish/aicamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  ssd_detect.cpp
app/src/main/cpp/caffe/: CMakeLists.txt
app/src/main/java/com/paperfish/aicamera/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/paperfish/aicamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
